fixed the direct visit to article through URL - fixed the redirection of post editor - fixed styling to truncate description in home page carousel - added get by section id API - fixed the footer styling - fixed the hamburger menu items

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -98,6 +98,10 @@
   line-height: 1.6;
   color: #dddddd;
   margin-top: 10px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 /* Top News Section - Right Side */
@@ -213,6 +217,10 @@
 
 .news-date {
   font-size: 13px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .header-section.dark .news-date {
@@ -925,4 +933,3 @@
     gap: 8px;
   }
 }
-
